# directory-getinfo

./: .gitignore  .gitmodules  CMakeLists.txt  FileSizeDivisor.cpp  FileSizeDivisor.h  GetInfo.pro  KDateTimeSeriesChartView.cpp  KDateTimeSeriesChartView.h  ProgressDlg.cpp  ProgressDlg.h  README.md  all.pro  config.h  defs.h  getinfo.cpp  getinfo.h  getinfo.ui  main.cpp  resources.qrc  settings.cpp  settings.h  utils.cpp  utils.h
dir_scanner/: AllDirectoriesScanner.cpp  AllDirectoriesScanner.h  DirectoriesScanOrchestrator.cpp  DirectoriesScanOrchestrator.h  DirectoryScanner.cpp  DirectoryScanner.h  IDirectoryScannerEventSink.h  KDirectoryInfo.h  KMimeSizesInfo.h
libs/sqlite3/: .gitignore  CMakeLists.txt  SqliteCommand.cpp  SqliteDb.cpp  SqliteDb.h  SqliteExceptions.h  SqliteRecordset.cpp  SqliteRecordset.h  sqlite3.pro
model/: DirectoryDetails.h  DirectoryProcessingStatus.h  DirectoryScanSwitch.cpp  DirectoryScanSwitch.h  DirectoryStats.h  DirectoryStore.cpp  DirectoryStore.h  HistoryProvider.cpp  HistoryProvider.h  MimeDetails.cpp  MimeDetails.h  WorkStack.cpp  WorkStack.h
view_model/: kdatetimeserieschartmodel.cpp  kdatetimeserieschartmodel.h  kfilesystemmodel.cpp  kfilesystemmodel.h  kmapper.cpp  kmapper.h  kmimesizesmodel.cpp  kmimesizesmodel.h
